--- a/doc/hist_horse_pop.Rmd
+++ b/doc/hist_horse_pop.Rmd
@@ -1,6 +1,8 @@
 ---
 title: "Historical horse population in Canada"
 bibliography: reference.bib
+params:
+  province: "Alberta"
 output: 
   github_document:
     toc: true
@@ -70,17 +72,17 @@ kable(max_horses,
       caption = "Table 1: Maximum and minimum number of horses for each province between 1940 - 1972")
 ```
 
-Below we zoom in and look at the province of Alberta:
+Below we zoom in and look at the province of `r params$province`:
 
 ```{r plot province, fig.width=5, fig.height=4, fig.cap="Figure 2. Number of horses for province of focus", out.width="50%"}
 province_plot <- horse_pop %>% 
-  filter(GEO == "Alberta") %>% 
+  filter(GEO == params$province) %>% 
   ggplot(aes(x = Ref_Date, y = Value)) +
   geom_point() +
   geom_line() +
   xlab("Year") +
   ylab("Number of horses") +
-  ggtitle("Historical number of horses per province in Canada") +
+  ggtitle(str_glue("Historical number of horses in {params$province}")) +
   facet_grid(~GEO) +
   scale_y_continuous(labels = scales::comma) +
   theme(axis.text.x = element_text(angle = 90, hjust = 1))
