--- a/doc/hist_horse_pop.Rmd
+++ b/doc/hist_horse_pop.Rmd
@@ -4,7 +4,9 @@ bibliography: reference.bib
 params:
   province: "Alberta"
 output: 
-  github_document:
+  html_document: 
+    toc: true
+  github_document: 
     toc: true
 ---
 
